[package]
name = "km_site_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.9", features = ["derive"] }
error-chain = "0.12.4"
reqwest = "0.11.9"
select = "0.5.0"
tokio = {"version"= "1.15.0", features=["macros"]}
url = "2.2.2"
